--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,18 @@ project(HelloIOS)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/ios-cmake/ios.toolchain.cmake)
-set(PLATFORM "OS64")
+find_package(tinyxml2 REQUIRED)
 
-add_executable(hello src/main.cpp)
+set(MACOSX_BUNDLE_BUNDLE_NAME "nova")
+set(MACOSX_BUNDLE_BUNDLE_VERSION "0.1")
+set(MACOSX_BUNDLE_GUI_IDENTIFIER "io.deadbeef.nova")
+set(MACOSX_BUNDLE_LONG_VERSION_STRING "0.1")
+set(MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1")
+
+add_executable(hello MACOSX_BUNDLE src/hello.cpp src/hello.mm)
+
+target_link_libraries(hello
+  PRIVATE
+    tinyxml2::tinyxml2
+    "-framework UIKit"
+)
